Add getFamilyRevisionByNum rest
